--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,9 @@
 Package: DataClean
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Basic convenient function to clean data
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Qiuyu(Peter) Long
+Maintainer: Qiuyu(Peter) Long <longqiuyu@nyu.edu>
+Description: Data cleaning, including translate code, set base level for factors
+License: NA
 Encoding: UTF-8
-LazyData: true
