--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,6 @@ Description: Data cleaning, including translate code, set base level for factors
 License: NA
 Encoding: UTF-8
 LazyData: true
+Imports:
+dplyr,
+lubridate
