--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,4 @@ Description: Data cleaning, including translate code, set base level for factors
 License: NA
 Encoding: UTF-8
 LazyData: true
-Imports:
-dplyr,
-lubridate
+Imports: lubridate
